# QA-Project

./: .dockerignore  .env_fortesting  .gitignore  README.md  docker-compose.dev.yml  docker-compose.fullstack.yml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.yml  github-push.ps1  log.txt  nginx.conf  package-lock.json  package.json  prometheus.yml  run-log.txt  seed.js  start-fullstack.ps1  start-fullstack.sh  start-local.ps1  start-local.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml  publish-package.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/src/: errors.rs  logging.rs  main.rs  middleware.rs  models.rs  scheduler.rs  tests.rs
backend/src/core/: anomaly.rs  pipeline.rs  temporal.rs
backend/src/features/: mod.rs  submissions.rs
backend/src/handlers/: academic_year.rs  admin.rs  auth.rs  department.rs  idea.rs  static.rs  upload.rs
backend/src/infrastructure/notification/: email.rs
backend/src/infrastructure/persistence/: migrations.rs  repository.rs
backend/src/interface/handlers/: contribution_handlers.rs  discourse_handlers.rs  identity_handlers.rs  mod.rs  report_handlers.rs
backend/src/interface/http/: metrics.rs  middleware.rs  router.rs
backend/src/modules/: mod.rs
backend/src/modules/contribution/: commands.rs  consensus.rs  lifecycle.rs  service.rs
backend/src/modules/discourse/: mod.rs  service.rs  thread.rs
backend/src/modules/identity/: commands.rs  context.rs  service.rs
backend/src/services/: email.rs  mod.rs
frontend-TU/: .env.example  Dockerfile  package-lock.json  package.json
frontend-TU/src/: App.tsx  index.css
frontend-TU/src/api/: tu-api-endpoints.ts  tu-auth-api.ts  tu-service.ts
frontend-TU/src/components/: CommentSection.tsx  DashboardWidgets.tsx  IdeaCard.tsx  IdeaList.tsx  TerminalCLI.tsx  TuGuard.tsx
frontend-TU/src/context/: TuIdentityContext.tsx
frontend-TU/src/hooks/: index.ts  useIdeas.ts
frontend-TU/src/pages/: AcademicYearsPage.tsx  AdminPage.tsx  CreateIdea.tsx  DashboardPage.tsx  HomePage.tsx  IdeaDetail.tsx  IdeasPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  SubmissionDetailPage.tsx  SubmissionsPage.tsx
frontend-TU/src/pages/admin/: AccessControl.tsx  AdminDashboardLayout.tsx  AdvancedUserManagement.tsx  SupremeDashboardLayout.tsx  SystemMonitor.tsx
frontend-TU/src/services/: commandParser.ts  eventSystem.ts
frontend-TU/src/store/: tu-store.ts
frontend-TU/src/types/: index.ts
frontend-TU/src/utils/: authUtils.ts
frontend-api/: api-client.d.ts  api-client.js  test.html
public/: index.html
tests/api-tests/: test-api.js
tests/integration-tests/: test-integration.sh
(+23 files in other folders)
