[package]
name = "intellectual-contribution-system"
version = "2.0.0"
edition = "2021"
authors = ["Academic Research Team"]
description = "University Intellectual Contribution Management System - MongoDB Edition (Refactored)"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
async-trait = "0.1"
dotenvy = "0.15"

# Security
bcrypt = "0.15"
jsonwebtoken = "9"

# Database - MONGODB
mongodb = "2"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrent Data Structures
dashmap = "5"

# Email validation
mailchecker = "5"

# Lazy statics
lazy_static = "1.4"

# OpenAPI & Swagger UI
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Prometheus Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# System monitoring
sysinfo = "0.30"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
