[package]
name = "icms-backend"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "icms-backend"
path = "src/main.rs"

[dependencies]
# Web Framework & Async Runtime
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"
http = "1"

# Database
mongodb = { version = "2.8", features = ["tokio-sync"] }
bson = { version = "2.8", features = ["chrono"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"

# Global state
lazy_static = "1.4"

# Time & DateTime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Static file embedding & MIME types
rust-embed = "8.3"
mime_guess = "2.0"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1"

# Error handling
thiserror = "1"
anyhow = "1"
zip = "8.5.1"

[dev-dependencies]
tokio-test = "0.4"
